[gd_scene load_steps=14 format=3 uid="uid://b2kbljfdvoj8p"]

[ext_resource type="Texture2D" uid="uid://blpjfxoveao0r" path="res://01_assets/01_sprites/03_UI/FinalBueno.png" id="1_gn7cv"]
[ext_resource type="Script" path="res://03_scripts/03_UI/Final.gd" id="1_ytg8j"]
[ext_resource type="LabelSettings" uid="uid://d31e2v2ph2qrc" path="res://03_scripts/03_UI/TextLabelSettings.tres" id="2_lepyv"]
[ext_resource type="FontFile" uid="uid://0c8blrst4tvx" path="res://01_assets/02_fonts/typo_comica/Typo_Comica_demo.otf" id="3_ymrxa"]
[ext_resource type="Texture2D" uid="uid://35a05ymptbpi" path="res://01_assets/01_sprites/03_UI/FinalMalo.png" id="4_djhy5"]
[ext_resource type="AudioStream" uid="uid://be8bpc3c2hq1h" path="res://04_audio/02_music/Music_Final.mp3" id="4_dnd0k"]
[ext_resource type="Texture2D" uid="uid://dlwip8214ukye" path="res://01_assets/01_sprites/03_UI/Buttons/Normal.png" id="7_f05pw"]
[ext_resource type="Texture2D" uid="uid://b0fdp0dlgajaa" path="res://01_assets/01_sprites/03_UI/Buttons/Pressed.png" id="8_c6avb"]
[ext_resource type="Texture2D" uid="uid://b7gcup3qgw0ti" path="res://01_assets/01_sprites/03_UI/Buttons/Hovered.png" id="9_v36v8"]
[ext_resource type="LabelSettings" uid="uid://bhjg7yugc5g58" path="res://03_scripts/03_UI/ButtonLabelSettings.tres" id="10_427oa"]
[ext_resource type="AudioStream" uid="uid://do5ciwcplgqf5" path="res://04_audio/01_SFX/fx_seleccionar.mp3" id="11_5i13p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4ap4"]
bg_color = Color(0, 0.341176, 0.792157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot7f2"]
bg_color = Color(0.784314, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ytg8j")

[node name="FinalBueno" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 721.0

[node name="Label3" type="Label" parent="FinalBueno"]
layout_mode = 0
offset_left = 701.0
offset_top = 65.0
offset_right = 1226.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_ymrxa")
theme_override_font_sizes/font_size = 30
text = "\"Somehow, against all odds, you've managed to keep people alive during your rule. Honestly, I have no idea how you did it, but hey, thanks for not completely ruining everything, I guess. It's a miracle we're not all starving or living in ruins. Keep it up... I suppose?\""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="FinalBueno"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 721.0
texture = ExtResource("1_gn7cv")

[node name="ProgressBarNoCap" type="ProgressBar" parent="FinalBueno"]
layout_mode = 0
offset_left = 750.0
offset_top = 515.0
offset_right = 1178.0
offset_bottom = 622.0
theme_override_fonts/font = ExtResource("3_ymrxa")
theme_override_font_sizes/font_size = 70
theme_override_styles/background = SubResource("StyleBoxFlat_d4ap4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ot7f2")
step = 1.0
rounded = true

[node name="FinalMalo" type="ColorRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 721.0

[node name="TextureRect" type="TextureRect" parent="FinalMalo"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 721.0
texture = ExtResource("4_djhy5")

[node name="Label" type="Label" parent="FinalMalo"]
layout_mode = 0
offset_left = 701.0
offset_top = 69.0
offset_right = 1226.0
offset_bottom = 478.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_ymrxa")
theme_override_font_sizes/font_size = 30
text = "\"Thanks to your brilliant leadership, the kingdom is now in deficit of absolutely everything. You've prioritized money over rights, and now, well, enjoy the consequences of your actions. Who knew that putting profit before people could backfire so spectacularly? Bravo.\""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ProgressBarCap" type="ProgressBar" parent="FinalMalo"]
layout_mode = 0
offset_left = 750.0
offset_top = 515.0
offset_right = 1178.0
offset_bottom = 622.0
theme_override_fonts/font = ExtResource("3_ymrxa")
theme_override_font_sizes/font_size = 70
theme_override_styles/background = SubResource("StyleBoxFlat_d4ap4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ot7f2")
step = 1.0
rounded = true

[node name="Label2" type="Label" parent="."]
offset_left = 727.0
offset_top = 631.0
offset_right = 1194.0
offset_bottom = 665.0
text = "SUCCESS RATE"
label_settings = ExtResource("2_lepyv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dnd0k")
volume_db = -10.0
autoplay = true

[node name="Button_next" type="TextureButton" parent="."]
offset_left = 220.0
offset_top = 604.0
offset_right = 570.0
offset_bottom = 729.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("7_f05pw")
texture_pressed = ExtResource("8_c6avb")
texture_hover = ExtResource("9_v36v8")
stretch_mode = 3

[node name="Label" type="Label" parent="Button_next"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.098
anchor_top = 0.168
anchor_right = 0.898
anchor_bottom = 0.824
offset_left = -0.0143394
offset_top = -1.00002
offset_right = -0.0143433
offset_bottom = -1.52588e-05
text = "MENU"
label_settings = ExtResource("10_427oa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FX_UI" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_5i13p")
bus = &"Sfx"

[connection signal="pressed" from="Button_next" to="." method="_on_button_next_pressed"]
